--- a/svit-mandriv/css/style.css
+++ b/svit-mandriv/css/style.css
@@ -1557,11 +1557,50 @@ body {
       justify-content: space-around;
 }
 
-.top .menu-item__link {
+.top__nav .menu-item__link {
   font-weight: 600;
   font-size: 18px;
   line-height: 28px;
   color: #fff;
+  position: relative;
+}
+
+.top__nav .menu-item__link::before,
+.top__nav .menu-item__link::after {
+  content: "";
+  height: 1px;
+  width: 100%;
+  -webkit-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+          transform: scaleX(0);
+  position: absolute;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+  background-color: #fff;
+}
+
+.top__nav .menu-item__link::before {
+  -webkit-transform-origin: right;
+      -ms-transform-origin: right;
+          transform-origin: right;
+  top: -10px;
+  right: -5px;
+}
+
+.top__nav .menu-item__link::after {
+  -webkit-transform-origin: left;
+      -ms-transform-origin: left;
+          transform-origin: left;
+  bottom: -10px;
+  left: -5px;
+}
+
+.top__nav .menu-item__link:hover::before,
+.top__nav .menu-item__link:hover::after {
+  -webkit-transform: scaleX(0.9);
+      -ms-transform: scaleX(0.9);
+          transform: scaleX(0.9);
 }
 
 .aboutUs {
